--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
